deploy/k8s/manifests/41-gateway-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: __GATEWAY_LB_SERVICE_NAME__
  namespace: __NAMESPACE__
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
  - name: http
    port: __GATEWAY_LB_PORT__
    targetPort: 8080
    protocol: TCP
